--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,10 +3,10 @@ steps:
     args:
       ["build", "-t", "gcr.io/$PROJECT_ID/github.com/${_USER}/${_SERVICE_NAME}:${SHORT_SHA}", "."]
 
-  - name: "gcr.io/cloud-builders/docker"
+  - name: gcr.io/cloud-builders/docker
     args: ["push", "gcr.io/$PROJECT_ID/github.com/${_USER}/${_SERVICE_NAME}"]
 
-  - name: "gcr.io/cloud-builders/gcloud"
+  - name: gcr.io/cloud-builders/gcloud
     args:
       [
         "run",
